Fixed the display of both the cards on the main page. Added overflow: scroll to ascital

--- a/style.css
+++ b/style.css
@@ -52,10 +52,6 @@ svg {
     margin: -0.5px 0;
 }
 
-p {
-    margin: 0;
-}
-
 ::selection {
     background: var(--accentColor);
     color: var(--lightColor);
@@ -82,7 +78,8 @@ p {
 }
 
 .section p {
-    margin: 0 2%;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -124,10 +121,6 @@ header h1 {
     width: 100%;
     max-height: 200px;
     margin: auto 0;
-}
-
-.projectCard p {
-    padding: 1% 5% 0% 5%;
 }
 
 #postList {
